2.0 unreleased
==============

- Use correct location for IObjectEvent.
  [hannosch]

- Removed test only PluggableAuthService dependency.
  [hannosch]

- Moved content type specific GenericSetup related functionality from CMFPlone
  into this package.
  [hannosch]

- Drop the dependency on simplejson. It's integrated into Python 2.6 as json.
  [hannosch]

- Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

- Changed objectIds and objectValues calls to use the IContainer API.
  [hannosch]

- Don't assume regular (non-btree) folders for next/previous support.
  [witsch]

- Removed various dependencies on CMFPlone.
  [hannosch]

- Cleaned up tests some more. No longer rely on the testfixture extension
  profile but adapt the tests to default Plone instead.
  [hannosch]

- Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

- Changed parameter name at script getXMLSelectVocab.py from 'method' to 
  'vocab_method' to avoid getting overridden from ZPublisher.HTTPRequest.
  This closes https://dev.plone.org/plone/ticket/6960.
  [igbun]

- Changed description label to summary for page and news item. This closes
  http://dev.plone.org/plone/ticket/8700.
  [hannosch]

- Adjusted functional tests to not rely on login portlet.
  [hannosch]

- Moved a manage_renameObject method from the autosort code into the ordered
  base class. It wasn't quite obvious, but the code was actually used.
  [hannosch]

- Removed icalendar package from the thirdparty folder. We don't use it
  ourselves and it's easy installable nowadays for anyone who wants it.
  [hannosch]

- Removed never fully implemented autosort and urlupload modules.
  [hannosch]

- Removed the weird Zope2 Interface to zope.interface bridging code.
  [hannosch]

- Removed annoying license statements from the source files. We have a central
  license.txt for that.
  [hannosch]

- Removed module aliases for content created before ATCT 1.0.
  [hannosch]
