@@ -1,6 +1,10 @@
 2.0 unreleased
 ==============
 
+- Subtopics shouldn't always acquire the 'start' query. Fixes  
+  https://dev.plone.org/plone/ticket/8827  
+  [pelle]
+
 - Use correct location for IObjectEvent.
   [hannosch]
 
